adding style to the notebooks to improve understandability

--- a/src/submission.ipynb
+++ b/src/submission.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a9b8c7d6",
+   "metadata": {},
+   "source": [
+    "### 1. Import Libraries\n",
+    "This cell imports the necessary Python libraries for the submission, including `pandas` for data manipulation, `numpy` for numerical operations, `tensorflow` for running the model inference, and `joblib` for loading the saved preprocessor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b345c3d2",
@@ -12,6 +21,15 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import joblib\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4a3c2d1",
+   "metadata": {},
+   "source": [
+    "### 2. Define Constants and Utility Functions\n",
+    "This cell defines a helper function `height_to_inches` to convert player height into a numerical format. It also sets up global constants for the model's `SEQUENCE_LENGTH` and the file paths for the saved model (`MODEL_PATH`) and preprocessor (`PREPROCESSOR_PATH`)."
    ]
   },
   {
@@ -33,6 +51,15 @@
     "SEQUENCE_LENGTH = 10\n",
     "MODEL_PATH = 'nfl_model.h5'\n",
     "PREPROCESSOR_PATH = 'preprocessor.joblib'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5d4e3f2",
+   "metadata": {},
+   "source": [
+    "### 3. Load Model and Preprocessor\n",
+    "This cell defines the `load_artifacts` function, which loads the trained Keras model and the scikit-learn preprocessor from the files specified in the constants. It includes error handling to raise a `FileNotFoundError` if either of the files is missing, which is crucial for debugging in the Kaggle environment."
    ]
   },
   {
@@ -60,6 +87,15 @@
     "    preprocessor = joblib.load(PREPROCESSOR_PATH)\n",
     "    \n",
     "    return model, preprocessor\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6e5f4a3",
+   "metadata": {},
+   "source": [
+    "### 4. Preprocess Features for Inference\n",
+    "First, the model and preprocessor are loaded into global memory to be available for the `predict` function without reloading on each call. The `preprocess_features` function replicates the exact feature engineering and preprocessing steps used during training. It takes the raw test dataframes, combines them, creates features like player `age`, applies the pre-fitted `preprocessor`, and finally constructs the input sequences of `SEQUENCE_LENGTH` frames that the LSTM model expects."
    ]
   },
   {
@@ -131,6 +167,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7f6a5b4",
+   "metadata": {},
+   "source": [
+    "### 5. Make Predictions\n",
+    "The `predict` function is the core of the inference logic. It receives data for a single play, converts the dataframes to pandas, and passes them to `preprocess_features` to get the model inputs. It then runs the prediction using the loaded model and formats the output into a pandas DataFrame with 'x' and 'y' columns as required by the competition."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b67e09e0",
@@ -161,6 +206,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f807b6c5",
+   "metadata": {},
+   "source": [
+    "### 6. Run Inference Server\n",
+    "This final cell sets up the Kaggle evaluation environment. It initializes the `NFLInferenceServer` with our `predict` function. The server will then either run in a live competition environment or use a local gateway for testing, depending on the environment variables."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f6e08bf6",
@@ -172,7 +226,8 @@
     "if os.getenv('KAGGLE_IS_COMPETITION_RERUN'):\n",
     "    inference_server.serve()\n",
     "else:\n",
-    "    inference_server.run_local_gateway(('/kaggle/input/nfl-big-data-bowl-2026-prediction/',))"
+    "    inference_server.run_local_gateway(('/kaggle/input/nfl-big-data-bowl-2026-prediction/',))\n",
+    "    "
    ]
   }
  ],
