reformating the data loading approch

--- a/src/predictor.ipynb
+++ b/src/predictor.ipynb
@@ -81,8 +81,27 @@
     "    Returns:\n",
     "        ColumnTransformer: The preprocessor.\n",
     "    \"\"\"\n",
-    "    categorical_features = ['play_direction', 'player_position', 'player_side', 'player_role', 'nfl_id']\n",
-    "    numerical_features = ['x', 'y', 's', 'a', 'dir', 'o', 'absolute_yardline_number', 'player_weight', 'num_frames_output', 'ball_land_x', 'ball_land_y', 'age', 'height_inches']\n",
+    "    # Identify column types from the dataframe\n",
+    "    numerical_features = features_df.select_dtypes(include=np.number).columns.tolist()\n",
+    "    categorical_features = features_df.select_dtypes(exclude=np.number).columns.tolist()\n",
+    "\n",
+    "    # Ensure boolean 'player_to_predict' is handled separately if it's not numeric\n",
+    "    boolean_features = []\n",
+    "    if 'player_to_predict' in categorical_features:\n",
+    "        categorical_features.remove('player_to_predict')\n",
+    "        boolean_features.append('player_to_predict')\n",
+    "    elif 'player_to_predict' in numerical_features:\n",
+    "        numerical_features.remove('player_to_predict')\n",
+    "        boolean_features.append('player_to_predict')\n",
+    "        \n",
+    "    # Remove identifiers that should not be model features\n",
+    "    ids_to_remove = ['game_id', 'play_id', 'frame_id']\n",
+    "    for col in ids_to_remove:\n",
+    "        if col in numerical_features:\n",
+    "            numerical_features.remove(col)\n",
+    "        if col in categorical_features:\n",
+    "            categorical_features.remove(col)\n",
+    "\n",
     "    boolean_features = ['player_to_predict']\n",
     "\n",
     "    numerical_transformer = StandardScaler()\n",
@@ -110,14 +129,11 @@
     "    return np.nan\n",
     "\n",
     "SEQUENCE_LENGTH = 10\n",
-    "\n",
     "def _create_sequences_for_group(group_df: pd.DataFrame, sequence_length):\n",
     "    \"\"\"\n",
     "    Creates sequences of features and corresponding labels for a single player/play group.\n",
     "    \"\"\"\n",
-    "    # Ensure the DataFrame is sorted by frame_id\n",
-    "    group_df = group_df.sort_values(by='frame_id').reset_index(drop=True)\n",
-    "\n",
+    "    # The group is already sorted by frame_id from the previous step\n",
     "    num_frames = len(group_df)\n",
     "    if num_frames < sequence_length + 1:\n",
     "        return np.array([]), np.array([])\n",
@@ -138,7 +154,6 @@
     "        labels.append(labels_array[i + sequence_length])\n",
     "\n",
     "    return np.array(sequences), np.array(labels)\n",
-    "\n",
     "\n",
     "def load_and_prepare_data(data_dir, test_size=0.2, random_state=42):\n",
     "    \"\"\"\n",
@@ -168,25 +183,11 @@
     "\n",
     "    merged_df = pd.merge(input_df, output_df, on=['game_id', 'play_id', 'nfl_id', 'frame_id'], suffixes=('', '_label'))\n",
     "\n",
-    "    # Feature Engineering\n",
-    "    merged_df['height_inches'] = merged_df['player_height'].apply(height_to_inches)\n",
-    "    \n",
-    "    game_date_str = merged_df['game_id'].astype(str).str[:8]\n",
-    "    game_date = pd.to_datetime(game_date_str, format='%Y%m%d')\n",
-    "    player_birth_date = pd.to_datetime(merged_df['player_birth_date'])\n",
-    "    merged_df['age'] = (game_date - player_birth_date).dt.days / 365.25\n",
-    "\n",
     "    all_sequences = []\n",
     "    all_labels = []\n",
     "\n",
-    "    # Define the columns that will be used as features for the preprocessor\n",
-    "    # This list should exclude labels and identifiers that are not model features\n",
-    "    feature_cols_for_model = [\n",
-    "        'x', 'y', 's', 'a', 'dir', 'o', 'absolute_yardline_number',\n",
-    "        'player_weight', 'num_frames_output', 'ball_land_x', 'ball_land_y',\n",
-    "        'age', 'height_inches', 'play_direction', 'player_position',\n",
-    "        'player_side', 'player_role', 'nfl_id', 'player_to_predict'\n",
-    "    ]\n",
+    "    # Use all columns from the original input dataframe as features, except for labels\n",
+    "    feature_cols_for_model = [col for col in input_df.columns]\n",
     "\n",
     "    # Create a DataFrame with only the features that will be preprocessed\n",
     "    # This is what the preprocessor will be fitted on\n",
@@ -204,6 +205,9 @@
     "    \n",
     "    # Add back identifiers needed for grouping and labels\n",
     "    processed_df = pd.concat([merged_df[['game_id', 'play_id', 'nfl_id', 'frame_id', 'x_label', 'y_label']], processed_features_df], axis=1)\n",
+    "\n",
+    "    # Sort by frame_id within each group to ensure correct sequence order\n",
+    "    processed_df = processed_df.sort_values(by=['game_id', 'play_id', 'nfl_id', 'frame_id']).reset_index(drop=True)\n",
     "\n",
     "    all_sequences = []\n",
     "    all_labels = []\n",
@@ -277,8 +281,8 @@
     "    ])\n",
     "\n",
     "    model.compile(optimizer=keras.optimizers.Adam(learning_rate=0.001),\n",
-    "                  loss='mse',\n",
-    "                  metrics=['mae'])\n",
+    "                  loss=tf.keras.losses.MeanSquaredError(),\n",
+    "                  metrics=[tf.keras.metrics.MeanAbsoluteError()])\n",
     "    return model\n",
     "\n",
     "def train_model(model, train_dataset, val_dataset, epochs, batch_size):\n",
@@ -333,12 +337,40 @@
     "    print(\"No training data generated. Please check data loading and feature engineering.\")\n",
     "    # return\n",
     "\n",
+    "# Detect and initialize hardware strategy\n",
+    "tpu_resolver = None\n",
+    "try:\n",
+    "    tpu_resolver = tf.distribute.cluster_resolver.TPUClusterResolver()\n",
+    "    print('TPU found with resolver: ', tpu_resolver.master())\n",
+    "except ValueError:\n",
+    "    print(\"Could not initialize TPU resolver. Falling back to other checks.\")\n",
+    "\n",
+    "if tpu_resolver:\n",
+    "    tf.config.experimental_connect_to_cluster(tpu_resolver)\n",
+    "    tf.tpu.experimental.initialize_tpu_system(tpu_resolver)\n",
+    "    strategy = tf.distribute.TPUStrategy(tpu_resolver)\n",
+    "    print(\"Running on TPU\")\n",
+    "else:\n",
+    "    # If no TPU is found, check for GPUs\n",
+    "    gpus = tf.config.list_physical_devices('GPU')\n",
+    "    if len(gpus) > 0:\n",
+    "        strategy = tf.distribute.MirroredStrategy()\n",
+    "        print(f'Running on {len(gpus)} GPU(s).')\n",
+    "    else:\n",
+    "        strategy = tf.distribute.get_strategy()\n",
+    "        print('Running on CPU.')\n",
+    "\n",
+    "print(\"REPLICAS: \", strategy.num_replicas_in_sync)\n",
+    "\n",
     "# Get the input and output shapes from the dataset specs\n",
     "feature_spec, label_spec = train_ds.element_spec\n",
     "input_features = feature_spec.shape[1] # Now shape is (SEQUENCE_LENGTH, input_features)\n",
     "output_shape = label_spec.shape[0]\n",
     "\n",
-    "model = build_model(input_features, output_shape)\n",
+    "# Build and compile the model within the strategy scope to run on TPU\n",
+    "with strategy.scope():\n",
+    "    model = build_model(input_features, output_shape)\n",
+    "\n",
     "model.summary()\n",
     "\n",
     "train_model(model, train_ds, val_ds, epochs, batch_size)"
