--- a/src/submission.ipynb
+++ b/src/submission.ipynb
@@ -131,15 +131,9 @@
     "    play_df = pd.concat([test_input_df, test_df], ignore_index=True)\n",
     "    play_df = play_df.sort_values(by=['nfl_id', 'frame_id']).reset_index(drop=True)\n",
     "\n",
-    "    # 1. Recreate the exact same features as in training\n",
-    "    play_df['height_inches'] = play_df['player_height'].apply(height_to_inches)\n",
-    "    game_date_str = play_df['game_id'].astype(str).str[:8]\n",
-    "    game_date = pd.to_datetime(game_date_str, format='%Y%m%d')\n",
-    "    player_birth_date = pd.to_datetime(play_df['player_birth_date'])\n",
-    "    play_df['age'] = (game_date - player_birth_date).dt.days / 365.25\n",
-    "\n",
-    "    # 2. Apply the pre-fitted preprocessor\n",
-    "    feature_cols = preprocessor.feature_names_in_\n",
+    "    # 1. Apply the pre-fitted preprocessor\n",
+    "    # The feature columns are determined by what the preprocessor was trained on\n",
+    "    feature_cols = [col for col in preprocessor.feature_names_in_]\n",
     "    processed_features_array = preprocessor.transform(play_df[feature_cols])\n",
     "    processed_features_df = pd.DataFrame(processed_features_array, index=play_df.index)\n",
     "\n",
