fixing the features names evaluator error

--- a/src/predictor.ipynb
+++ b/src/predictor.ipynb
@@ -20,6 +20,7 @@
    "outputs": [],
    "source": [
     "!pip install --upgrade tensorflow keras\n",
+    "!pip install --upgrade polars\n",
     "\n",
     "import os\n",
     "import pandas as pd\n",
@@ -289,7 +290,7 @@
     "    \"\"\"\n",
     "    Trains the Keras model.\n",
     "    \"\"\"\n",
-    "    train_dataset = train_dataset.shuffle(buffer_size=30000).batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
+    "    train_dataset = train_dataset.shuffle(buffer_size=10000).batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
     "    if val_dataset:\n",
     "        val_dataset = val_dataset.batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
     "\n",
@@ -329,7 +330,7 @@
     "prediction_data_dir = '/kaggle/input/nfl-big-data-bowl-2026-prediction/train'\n",
     "\n",
     "batch_size = 32\n",
-    "epochs = 1000\n",
+    "epochs = 3\n",
     "\n",
     "train_ds, val_ds, preprocessor = load_and_prepare_data(prediction_data_dir)\n",
     "\n",
@@ -492,7 +493,7 @@
     "    play_df['age'] = (game_date - player_birth_date).dt.days / 365.25\n",
     "\n",
     "    # 2. Apply the pre-fitted preprocessor\n",
-    "    feature_cols = preprocessor.get_feature_names_out()\n",
+    "    feature_cols = preprocessor.feature_names_in_\n",
     "    processed_features_array = preprocessor.transform(play_df[feature_cols])\n",
     "    processed_features_df = pd.DataFrame(processed_features_array, index=play_df.index)\n",
     "\n",
