--- a/src/predictor.ipynb
+++ b/src/predictor.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "    numerical_transformer = StandardScaler()\n",
     "    categorical_transformer = OneHotEncoder(handle_unknown='ignore')\n",
-    "    boolean_transformer = FunctionTransformer(lambda x: x.astype(int))\n",
+    "    boolean_transformer = FunctionTransformer(lambda x: x.fillna(0).astype(int))\n",
     "\n",
     "    preprocessor = ColumnTransformer(\n",
     "        transformers=[\n",
@@ -497,24 +497,23 @@
     "    processed_features_array = preprocessor.transform(play_df[feature_cols])\n",
     "    processed_features_df = pd.DataFrame(processed_features_array, index=play_df.index)\n",
     "\n",
-    "    # Add back identifiers needed for sequence creation\n",
-    "    processed_df = pd.concat([play_df[['nfl_id', 'frame_id']], processed_features_df], axis=1)\n",
-    "    \n",
     "    # 3. Create sequences for each row in the original `test_df` (each row to predict)\n",
+    "    processed_df_with_ids = pd.concat([play_df[['nfl_id', 'frame_id']], processed_features_df], axis=1)\n",
     "    sequences = []\n",
     "    for _, row_to_predict in test_df.iterrows():\n",
     "        player_id = row_to_predict['nfl_id']\n",
     "        frame_id = row_to_predict['frame_id']\n",
     "        \n",
     "        # Find the player's data and the exact frame we need to predict\n",
-    "        player_data = processed_df[processed_df['nfl_id'] == player_id]\n",
-    "        prediction_frame_index = player_data[player_data['frame_id'] == frame_id].index[0]\n",
+    "        player_data_with_ids = processed_df_with_ids[processed_df_with_ids['nfl_id'] == player_id]\n",
+    "        prediction_frame_index = player_data_with_ids[player_data_with_ids['frame_id'] == frame_id].index[0]\n",
     "        \n",
     "        # The sequence consists of the `SEQUENCE_LENGTH` frames *before* the prediction frame\n",
     "        start_idx = prediction_frame_index - SEQUENCE_LENGTH\n",
     "        end_idx = prediction_frame_index\n",
     "        \n",
-    "        sequence = player_data.iloc[start_idx:end_idx].drop(columns=['nfl_id', 'frame_id']).values\n",
+    "        # Slice the sequence from the purely numerical dataframe\n",
+    "        sequence = processed_features_df.iloc[start_idx:end_idx].values\n",
     "        sequences.append(sequence)\n",
     "\n",
     "    return np.array(sequences)"
