updating the saving and loading of the cache to pandas

--- a/src/predictor.ipynb
+++ b/src/predictor.ipynb
@@ -679,13 +679,13 @@
     "print(f\"   y_train shape: {y_train.shape}\")\n",
     "print(f\"   y_val shape: {y_val.shape}\")\n",
     "\n",
-    "# Save arrays\n",
-    "print(f\"\\n💾 Saving cache to {CACHE_DIR}...\")\n",
-    "np.save(f'{CACHE_DIR}/X_train.npy', X_train)\n",
-    "np.save(f'{CACHE_DIR}/X_val.npy', X_val)\n",
-    "np.save(f'{CACHE_DIR}/y_train.npy', y_train)\n",
-    "np.save(f'{CACHE_DIR}/y_val.npy', y_val)\n",
-    "joblib.dump(preprocessor, f'{CACHE_DIR}/preprocessor.joblib')\n",
+        "    # Save arrays as Parquet files\n",
+        "    print(f\"\\n💾 Saving cache to {CACHE_DIR} using Parquet...\")\n",
+        "    pd.DataFrame(X_train).to_parquet(f'{CACHE_DIR}/X_train.parquet')\n",
+        "    pd.DataFrame(X_val).to_parquet(f'{CACHE_DIR}/X_val.parquet')\n",
+        "    pd.DataFrame(y_train).to_parquet(f'{CACHE_DIR}/y_train.parquet')\n",
+        "    pd.DataFrame(y_val).to_parquet(f'{CACHE_DIR}/y_val.parquet')\n",
+        "    joblib.dump(preprocessor, f'{CACHE_DIR}/preprocessor.joblib')\n",
     "\n",
     "# Save metadata\\n\n",
     "metadata = {\n",
@@ -702,9 +702,9 @@
     "        f.write(f\"{key}: {value}\\n\")\n",
     "\n",
     "# Calculate total size\n",
-    "total_size = sum(\n",
-    "    os.path.getsize(f'{CACHE_DIR}/{fname}') \n",
-    "    for fname in ['X_train.npy', 'X_val.npy', 'y_train.npy', 'y_val.npy', 'preprocessor.joblib']\n",
+        "    total_size = sum(\n",
+        "        os.path.getsize(f'{CACHE_DIR}/{fname}') \n",
+        "        for fname in ['X_train.parquet', 'X_val.parquet', 'y_train.parquet', 'y_val.parquet', 'preprocessor.joblib']\n",
     ")\n",
     "\n",
     "print(f\"✅ Cache saved successfully!\")\n",
@@ -769,20 +769,19 @@
     "    print(f\"   Please update CACHE_INPUT_PATH or run the data processing cell instead.\")\n",
     "    raise FileNotFoundError(f\"Cache directory not found: {CACHE_INPUT_PATH}\")\n",
     "\n",
-    "print(f\"📂 Loading preprocessed data from cache...\")\n",
-    "print(f\"   Location: {CACHE_INPUT_PATH}\")\n",
+    "    print(f\"📂 Loading preprocessed data from cache (Parquet)...\")\n",
+    "    print(f\"   Location: {CACHE_INPUT_PATH}\")\n",
     "\n",
-    "# Load numpy arrays\\n\n",
-    "X_train = np.load(f'{CACHE_INPUT_PATH}/X_train.npy')\n",
-    "X_val = np.load(f'{CACHE_INPUT_PATH}/X_val.npy')\n",
-    "y_train = np.load(f'{CACHE_INPUT_PATH}/y_train.npy')\n",
-    "y_val = np.load(f'{CACHE_INPUT_PATH}/y_val.npy')\n",
-    "preprocessor = joblib.load(f'{CACHE_INPUT_PATH}/preprocessor.joblib')\n",
+    "    # Load Parquet files and convert to numpy arrays\n",
+    "    X_train = pd.read_parquet(f'{CACHE_INPUT_PATH}/X_train.parquet').to_numpy()\n",
+    "    X_val = pd.read_parquet(f'{CACHE_INPUT_PATH}/X_val.parquet').to_numpy()\n",
+    "    y_train = pd.read_parquet(f'{CACHE_INPUT_PATH}/y_train.parquet').to_numpy()\n",
+    "    y_val = pd.read_parquet(f'{CACHE_INPUT_PATH}/y_val.parquet').to_numpy()\n",
+    "    preprocessor = joblib.load(f'{CACHE_INPUT_PATH}/preprocessor.joblib')\n",
     "\n",
     "print(f\" Cache loaded successfully!\")\n",
     "print(f\"   X_train shape: {X_train.shape}\")\n",
     "print(f\"   X_val shape: {X_val.shape}\")\n",
-    "print(f\"   y_train shape: {y_train.shape}\")\n",
     "print(f\"   y_val shape: {y_val.shape}\")\n",
     "\n",
     "# Create TensorFlow datasets from cached arrays\\n\n",
