fixing the order of the imports

--- a/src/manual_data_processing/manual_submission.ipynb
+++ b/src/manual_data_processing/manual_submission.ipynb
@@ -5,41 +5,17 @@
    "execution_count": null,
    "id": "bcc6ecd0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Local Data Loading ---\n",
-      "Attempting to load test data from:\n",
-      " /home/samer/Desktop/competitions/NFL_Big_Data_Bowl_2026_dev/nfl-big-data-bowl-2026-prediction/test_input.csv\n",
-      " /home/samer/Desktop/competitions/NFL_Big_Data_Bowl_2026_dev/nfl-big-data-bowl-2026-prediction/test.csv\n",
-      "Loading data from /home/samer/Desktop/competitions/NFL_Big_Data_Bowl_2026_dev/nfl-big-data-bowl-2026-prediction/test_input.csv...\n",
-      "Loaded 49753 rows.\n",
-      "Loading data from /home/samer/Desktop/competitions/NFL_Big_Data_Bowl_2026_dev/nfl-big-data-bowl-2026-prediction/test.csv...\n",
-      "Loaded 5837 rows.\n",
-      "Local data loaded successfully.\n",
-      "Running local prediction test...\n",
-      "Loading model from /home/samer/Desktop/competitions/NFL_Big_Data_Bowl_2026_dev/trained_models/nfl_23_input_validation loss_ 118.4529.keras...\n",
-      "Model loaded successfully.\n",
-      "Predictions generated successfully:\n",
-      "          x         y\n",
-      "0  0.044022 -0.003708\n",
-      "1  0.044022 -0.003708\n",
-      "2  0.044022 -0.003708\n",
-      "3  0.044022 -0.003708\n",
-      "4  0.044022 -0.003708\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
+    "# Import TensorFlow first to avoid Protobuf version conflicts with other libraries\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
     "import pandas as pd\n",
     "import polars as pl\n",
     "import numpy as np\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "import kaggle_evaluation.nfl_inference_server\n",
     "\n",
     "# =================================================================================================\n",
@@ -267,13 +243,14 @@
     "# =================================================================================================\n",
     "\n",
     "if __name__==\"__main__\":\n",
-    "    if test_df_manual is not None and test_input_df_manual is not None:\n",
-    "        print(\"Running local prediction test...\")\n",
-    "        predictions = predict(test_df_manual, test_input_df_manual)\n",
-    "        print(\"Predictions generated successfully:\")\n",
-    "        print(predictions.head())\n",
-    "    else:\n",
-    "        print(\"Skipping local test: Data not loaded.\")\n",
+    "    # if test_df_manual is not None and test_input_df_manual is not None:\n",
+    "    #     print(\"Running local prediction test...\")\n",
+    "    #     predictions = predict(test_df_manual, test_input_df_manual)\n",
+    "    #     print(\"Predictions generated successfully:\")\n",
+    "    #     print(predictions.head())\n",
+    "    # else:\n",
+    "    #     print(\"Skipping local test: Data not loaded.\")\n",
+    "    pass\n",
     "\n",
     "inference_server = kaggle_evaluation.nfl_inference_server.NFLInferenceServer(predict)\n",
     "\n",
