adding an environment variable

--- a/src/manual_data_processing/manual_submission.ipynb
+++ b/src/manual_data_processing/manual_submission.ipynb
@@ -7,12 +7,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# CRITICAL: Set environment variables BEFORE any imports to fix Protobuf conflicts\n",
     "import os\n",
-    "import sys\n",
-    "# Import TensorFlow first to avoid Protobuf version conflicts with other libraries\n",
+    "os.environ['PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION'] = 'python'\n",
+    "\n",
+    "# Import TensorFlow FIRST to avoid Protobuf version conflicts\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "\n",
+    "# Now import other libraries\n",
+    "import sys\n",
     "import pandas as pd\n",
     "import polars as pl\n",
     "import numpy as np\n",
